# claims-autoencoder

./: .gitignore  ADD_STUDY_PERIOD.md  ALL_ISSUES_FIXED.md  CLAUDE_FLOW_QUICKSTART.md  CLEAN_WORKFLOW.md  CLEAR_CACHE_TO_FIX.md  CLI_MIGRATION_GUIDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_WITH_DASHBOARD.md  DASHBOARD_EXPLAINED.md  DATABRICKS_PORTING_GUIDE.md  DATABRICKS_READY_STATUS.md  DATABRICKS_SETUP.md  DEPENDENCY_FIX.md  DEPENDENCY_FIXED.md  DEPLOY_EXISTING_WEBAPP.md  FAIRNESS_DEBUG_GUIDE.md  FIX_APPLIED.md  FIX_CLI_ISSUE.md  FIX_DEPRECATION_WARNINGS.md  FT_TRANSFORMER_MISSING.md  GITHUB_ACTIONS_DEBUG.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GLOBAL_IMPORTANCE_FIX.md  IMPORT_ERROR_FIX.md  INDEX.md  INSTALL.md  INSTALL_DEPENDENCIES.md  MANIFEST.in  MIGRATION_GUIDE.md  MODULARIZATION_EXECUTION_PLAN.md  MODULARIZATION_PLAN.md  MODULARIZATION_QUICKSTART.md  Makefile  NEXT_STEPS_AFTER_MODULARIZATION.md  OPTIONAL_PLOTLY_FIX.md  PRODUCTION_CHECKLIST.md  PROJECT_REVIEW_AND_FIX.md  PROJECT_STATUS.md  PSI_INTEGRATION_COMPLETE.md  (+97 more)
.streamlit/: config.toml
_modularization_backup_20260204_173929/: requirements.txt  requirements_clean.txt  setup.py
backup_20260201_201607/: CLAUDE_FLOW_INTEGRATION.md  CLEANUP_COMPLETE.md  DATABRICKS_COMPLETE.md  DATABRICKS_GITHUB_ARCHITECTURE.md  DATABRICKS_IMPLEMENTATION_PLAN.md  DATABRICKS_QUICK_REFERENCE.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PIPELINE_COMPLETE.md  PROJECT_COMPLETE.md  QUICK_FIX.md  SEGFAULT_FIX.md  SETUP_INSTRUCTIONS.md  STEPS_3_AND_4_COMPLETE.md  add_complete_shap.py  add_shap_to_webapp.py  app_complete.py  app_enhanced.py  apply_safe_force_plot_fix.py  cleanup_shap_duplicates.sh  create_complete_shap.py  force_plot_fix_instructions.py  quick_shap_demo.py  test.py  test_fairness.py  test_notebook.py  test_preprocessing.py  (+1 more)
(+78 files in other folders)
